Alpha Blend transparency glitches with volume #66292

Closed
opened 2019-07-01 10:21:27 +02:00 by Luciano Muñoz Sessarego · 3 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.71

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: bbb3500c97
Worked: no idea if it ever did

Short description of error
I have this smoke volume in the scene that seems to appear "reflected" on a place in the scene that has no smoke.
2019-07-01 09_06_28-L u c i a n o (@lucianomunoz_) _ Twitter.png after trouble shooting, in the place where the ghost smoke appears there is a plane with a semi transparent texture (that little blue halo you can see in the back is a texture that has a gradient that makes it transparent: the blend mode is set to alpha blend, and the shadow to none, backface culling is off, show backface is off, and screen space refraction is off too".
2019-07-01 09_10_15-Window.png

Exact steps for others to reproduce the error
Open the provided file : RocketWoman_LookDev_v016.blend
if there is no smoke (but there should be), just go bake all simulations, you'll see the smoke and the ghost smoke described in the pictures above.

if anything more hit me up!

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.71 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: `bbb3500c97` Worked: no idea if it ever did **Short description of error** I have this smoke volume in the scene that seems to appear "reflected" on a place in the scene that has no smoke. ![2019-07-01 09_06_28-L u c i a n o (@lucianomunoz_) _ Twitter.png](https://archive.blender.org/developer/F7558131/2019-07-01_09_06_28-L_u_c_i_a_n_o___lucianomunoz_____Twitter.png) after trouble shooting, in the place where the ghost smoke appears there is a plane with a semi transparent texture (that little blue halo you can see in the back is a texture that has a gradient that makes it transparent: the blend mode is set to alpha blend, and the shadow to none, backface culling is off, show backface is off, and screen space refraction is off too". ![2019-07-01 09_10_15-Window.png](https://archive.blender.org/developer/F7558134/2019-07-01_09_10_15-Window.png) **Exact steps for others to reproduce the error** Open the provided file : [RocketWoman_LookDev_v016.blend](https://archive.blender.org/developer/F7558137/RocketWoman_LookDev_v016.blend) if there is no smoke (but there should be), just go bake all simulations, you'll see the smoke and the ghost smoke described in the pictures above. if anything more hit me up!
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz
Clément Foucault self-assigned this 2019-07-01 13:27:24 +02:00

This issue was referenced by 7a4c99de5a

This issue was referenced by 7a4c99de5a637c87c03151cd671b347590140c17

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66292
No description provided.