Fix T66292: Alpha Blend transparency glitches with volume